@@ -54,6 +54,7 @@ rm -fr %{buildroot}
 
 %doc AUTHORS ChangeLog NEWS README Copyright TODO
 %doc doc/*.html
+%doc doc/*.gif
 %doc doc/*.txt
 %{_libdir}/lib*.so.*
 %{_libexecdir}/gam_server
@@ -68,6 +69,12 @@ rm -fr %{buildroot}
 
 
 %changelog
+* Sun Oct  3 2004 Daniel Veillard <veillard@redhat.com> 0.0.14-1
+- Found and fixed the annoying bug where update were not received
+  should fix bugs ##132429, #133665 and #134413
+- new mechanism to debug on-the-fly by sending SIGUSR2 to client or server
+- Added documentation about internals
+
 * Fri Oct  1 2004 Daniel Veillard <veillard@redhat.com> 0.0.13-1
 - applied portability fixes
 - hardened the code while chasing a segfault
